Add comprehensive ndp-ep Python library API reference
- New python/02-api-reference.md with all 44 library functions
- Organized by category: Connection, Datasets, Organizations, Services, S3, Kafka, Pelican, Jupyter
- Includes code examples for each function
- Common patterns section for typical workflows
- Renamed 02-s3-integration.md to 03-s3-integration.md
- Updated python/README.md with new tutorial

Closes #15

--- a/examples/goes-utah-satellite.ipynb
+++ b/examples/goes-utah-satellite.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,62 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": "# NDP-EP Configuration\nAPI_URL = \"http://localhost:8002\"  # Change to your API endpoint\nTOKEN = \"testing_token\"            # Change to your token\n\n# Initialize client\nclient = Client(base_url=API_URL, token=TOKEN)\n\n# Verify connection and check all services\nstatus = client.get_system_status()\n\nprint(f\"NDP-EP: {status['ep_name']}\")\nprint(f\"API Version: {status['api_version']}\")\nprint(f\"\")\nprint(\"Services status:\")\nprint(f\"  - Local Catalog: {'✓ Connected' if status.get('backend_connected') else '✗ NOT CONNECTED'}\")\nprint(f\"  - S3 Storage:    {'✓ Connected' if status.get('s3_connected') else '✗ NOT CONNECTED'}\")\nprint(f\"  - Kafka:         {'✓ Enabled' if status.get('kafka_enabled') else '- Disabled'}\")\n\n# Check if we can proceed\nif not status.get('backend_connected'):\n    raise RuntimeError(\"❌ Local catalog is not connected. Please check your NDP-EP configuration.\")\n\nif not status.get('s3_connected'):\n    raise RuntimeError(\"❌ S3 storage is not connected. Please check your MinIO/S3 configuration.\")\n\nprint(\"\")\nprint(\"✓ All required services are available. Ready to proceed!\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'api_version': '0.4.0', 'organization': 'ORGANIZATION-DEMO', 'ep_name': 'EP-DEMO', 'organization_based_access': False, 'local_catalog_backend': 'ckan', 'backend_connected': False, 'pre_ckan_enabled': False, 'kafka_enabled': True, 'jupyterlab_enabled': True, 's3_enabled': True, 'auth_api_url': 'https://idp.nationaldataplatform.org/temp/information', 'metrics_endpoint': 'https://federation.ndp.utah.edu/metrics/', 'metrics_interval_seconds': 3300, 'is_public': True, 'kafka_host': 'kafka', 'kafka_port': 9093, 'jupyterlab_url': 'http://jupyterlab:8888', 's3_connected': True}\n",
+      "NDP-EP: EP-DEMO\n",
+      "API Version: 0.4.0\n",
+      "\n",
+      "Services status:\n",
+      "  - Local Catalog: ✗ NOT CONNECTED\n",
+      "  - S3 Storage:    ✓ Connected\n",
+      "  - Kafka:         ✓ Enabled\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "❌ Local catalog is not connected. Please check your NDP-EP configuration.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# Check if we can proceed\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m status.get(\u001b[33m'\u001b[39m\u001b[33mbackend_connected\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m❌ Local catalog is not connected. Please check your NDP-EP configuration.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m status.get(\u001b[33m'\u001b[39m\u001b[33ms3_connected\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m❌ S3 storage is not connected. Please check your MinIO/S3 configuration.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: ❌ Local catalog is not connected. Please check your NDP-EP configuration."
+     ]
+    }
+   ],
+   "source": [
+    "# NDP-EP Configuration\n",
+    "API_URL = \"http://localhost:8002\"  # Change to your API endpoint\n",
+    "TOKEN = \"testing_token\"            # Change to your token\n",
+    "\n",
+    "# Initialize client\n",
+    "client = Client(base_url=API_URL, token=TOKEN)\n",
+    "\n",
+    "# Verify connection and check all services\n",
+    "status = client.get_system_status()\n",
+    "\n",
+    "print(f\"NDP-EP: {status['ep_name']}\")\n",
+    "print(f\"API Version: {status['api_version']}\")\n",
+    "print(f\"\")\n",
+    "print(\"Services status:\")\n",
+    "print(f\"  - Local Catalog: {'✓ Connected' if status.get('backend_connected') else '✗ NOT CONNECTED'}\")\n",
+    "print(f\"  - S3 Storage:    {'✓ Connected' if status.get('s3_connected') else '✗ NOT CONNECTED'}\")\n",
+    "print(f\"  - Kafka:         {'✓ Enabled' if status.get('kafka_enabled') else '- Disabled'}\")\n",
+    "\n",
+    "# Check if we can proceed\n",
+    "if not status.get('backend_connected'):\n",
+    "    raise RuntimeError(\"❌ Local catalog is not connected. Please check your NDP-EP configuration.\")\n",
+    "\n",
+    "if not status.get('s3_connected'):\n",
+    "    raise RuntimeError(\"❌ S3 storage is not connected. Please check your MinIO/S3 configuration.\")\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"✓ All required services are available. Ready to proceed!\")"
+   ]
   },
   {
    "cell_type": "markdown",
